update README & make test